build/cil/src/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file : globals

   3  globals :
   4          | global globals
   5          | SEMICOLON globals

   6  location :

   7  global : declaration
   8         | function_def
   9         | EXTERN string_constant declaration
  10         | EXTERN string_constant LBRACE globals RBRACE
  11         | ASM LPAREN string_constant RPAREN SEMICOLON
  12         | pragma
  13         | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list prepost SEMICOLON
  14         | IDENT LPAREN RPAREN prepost SEMICOLON
  15         | AT_TRANSFORM LBRACE global RBRACE IDENT LBRACE globals RBRACE
  16         | AT_TRANSFORMEXPR LBRACE expression RBRACE IDENT LBRACE expression RBRACE
  17         | location error SEMICOLON

  18  id_or_typename : IDENT
  19                 | NAMED_TYPE
  20                 | AT_NAME LPAREN IDENT RPAREN

  21  maybecomma :
  22             | COMMA

  23  primary_expression : IDENT
  24                     | constant
  25                     | paren_comma_expression
  26                     | LPAREN block RPAREN
  27                     | AT_EXPR LPAREN IDENT RPAREN

  28  postfix_expression : primary_expression
  29                     | postfix_expression bracket_comma_expression
  30                     | postfix_expression LPAREN arguments RPAREN
  31                     | BUILTIN_VA_ARG LPAREN expression COMMA type_name RPAREN
  32                     | BUILTIN_TYPES_COMPAT LPAREN type_name COMMA type_name RPAREN
  33                     | BUILTIN_OFFSETOF LPAREN type_name COMMA offsetof_member_designator RPAREN
  34                     | postfix_expression DOT id_or_typename
  35                     | postfix_expression ARROW id_or_typename
  36                     | postfix_expression PLUS_PLUS
  37                     | postfix_expression MINUS_MINUS
  38                     | LPAREN type_name RPAREN LBRACE initializer_list_opt RBRACE

  39  offsetof_member_designator : id_or_typename
  40                             | offsetof_member_designator DOT IDENT
  41                             | offsetof_member_designator bracket_comma_expression

  42  unary_expression : postfix_expression
  43                   | PLUS_PLUS unary_expression
  44                   | MINUS_MINUS unary_expression
  45                   | SIZEOF unary_expression
  46                   | SIZEOF LPAREN type_name RPAREN
  47                   | ALIGNOF unary_expression
  48                   | ALIGNOF LPAREN type_name RPAREN
  49                   | PLUS cast_expression
  50                   | MINUS cast_expression
  51                   | STAR cast_expression
  52                   | AND cast_expression
  53                   | EXCLAM cast_expression
  54                   | TILDE cast_expression
  55                   | AND_AND IDENT

  56  cast_expression : unary_expression
  57                  | LPAREN type_name RPAREN cast_expression

  58  multiplicative_expression : cast_expression
  59                            | multiplicative_expression STAR cast_expression
  60                            | multiplicative_expression SLASH cast_expression
  61                            | multiplicative_expression PERCENT cast_expression

  62  additive_expression : multiplicative_expression
  63                      | additive_expression PLUS multiplicative_expression
  64                      | additive_expression MINUS multiplicative_expression

  65  shift_expression : additive_expression
  66                   | shift_expression INF_INF additive_expression
  67                   | shift_expression SUP_SUP additive_expression

  68  relational_expression : shift_expression
  69                        | relational_expression INF shift_expression
  70                        | relational_expression SUP shift_expression
  71                        | relational_expression INF_EQ shift_expression
  72                        | relational_expression SUP_EQ shift_expression

  73  equality_expression : relational_expression
  74                      | equality_expression EQ_EQ relational_expression
  75                      | equality_expression EXCLAM_EQ relational_expression

  76  bitwise_and_expression : equality_expression
  77                         | bitwise_and_expression AND equality_expression

  78  bitwise_xor_expression : bitwise_and_expression
  79                         | bitwise_xor_expression CIRC bitwise_and_expression

  80  bitwise_or_expression : bitwise_xor_expression
  81                        | bitwise_or_expression PIPE bitwise_xor_expression

  82  logical_and_expression : bitwise_or_expression
  83                         | logical_and_expression AND_AND bitwise_or_expression

  84  logical_or_expression : logical_and_expression
  85                        | logical_or_expression PIPE_PIPE logical_and_expression

  86  conditional_expression : logical_or_expression
  87                         | logical_or_expression QUEST opt_expression COLON conditional_expression

  88  assignment_expression : conditional_expression
  89                        | cast_expression EQ assignment_expression
  90                        | cast_expression PLUS_EQ assignment_expression
  91                        | cast_expression MINUS_EQ assignment_expression
  92                        | cast_expression STAR_EQ assignment_expression
  93                        | cast_expression SLASH_EQ assignment_expression
  94                        | cast_expression PERCENT_EQ assignment_expression
  95                        | cast_expression AND_EQ assignment_expression
  96                        | cast_expression PIPE_EQ assignment_expression
  97                        | cast_expression CIRC_EQ assignment_expression
  98                        | cast_expression INF_INF_EQ assignment_expression
  99                        | cast_expression SUP_SUP_EQ assignment_expression

 100  expression : assignment_expression

 101  constant : CST_INT
 102           | CST_FLOAT
 103           | CST_CHAR
 104           | CST_WCHAR
 105           | string_constant
 106           | wstring_list

 107  string_constant : string_list

 108  one_string_constant : CST_STRING

 109  string_list : one_string
 110              | string_list one_string

 111  wstring_list : CST_WSTRING
 112               | wstring_list one_string
 113               | wstring_list CST_WSTRING

 114  one_string : CST_STRING
 115             | FUNCTION__
 116             | PRETTY_FUNCTION__

 117  init_expression : expression
 118                  | LBRACE initializer_list_opt RBRACE

 119  initializer_list : initializer
 120                   | initializer COMMA initializer_list_opt

 121  initializer_list_opt :
 122                       | initializer_list

 123  initializer : init_designators eq_opt init_expression
 124              | gcc_init_designators init_expression
 125              | init_expression

 126  eq_opt : EQ
 127         |

 128  init_designators : DOT id_or_typename init_designators_opt
 129                   | LBRACKET expression RBRACKET init_designators_opt
 130                   | LBRACKET expression ELLIPSIS expression RBRACKET

 131  init_designators_opt :
 132                       | init_designators

 133  gcc_init_designators : id_or_typename COLON

 134  arguments :
 135            | comma_expression

 136  opt_expression :
 137                 | comma_expression

 138  comma_expression : expression
 139                   | expression COMMA comma_expression
 140                   | error COMMA comma_expression

 141  comma_expression_opt :
 142                       | comma_expression

 143  paren_comma_expression : LPAREN comma_expression RPAREN
 144                         | LPAREN error RPAREN

 145  bracket_comma_expression : LBRACKET comma_expression RBRACKET
 146                           | LBRACKET error RBRACKET

 147  block : block_begin local_labels block_attrs block_element_list RBRACE
 148        | error location RBRACE

 149  block_begin : LBRACE

 150  block_attrs :
 151              | BLOCKATTRIBUTE paren_attr_list_ne

 152  block_element_list :
 153                     | declaration block_element_list
 154                     | statement block_element_list
 155                     | IDENT COLON
 156                     | pragma block_element_list

 157  local_labels :
 158               | LABEL__ local_label_names SEMICOLON local_labels

 159  local_label_names : IDENT
 160                    | IDENT COMMA local_label_names

 161  statement : SEMICOLON
 162            | comma_expression SEMICOLON
 163            | block
 164            | IF paren_comma_expression statement
 165            | IF paren_comma_expression statement ELSE statement
 166            | SWITCH paren_comma_expression statement
 167            | WHILE paren_comma_expression statement
 168            | DO statement WHILE paren_comma_expression SEMICOLON
 169            | FOR LPAREN for_clause opt_expression SEMICOLON opt_expression RPAREN statement
 170            | IDENT COLON attribute_nocv_list statement
 171            | CASE expression COLON statement
 172            | CASE expression ELLIPSIS expression COLON statement
 173            | DEFAULT COLON
 174            | RETURN SEMICOLON
 175            | RETURN comma_expression SEMICOLON
 176            | BREAK SEMICOLON
 177            | CONTINUE SEMICOLON
 178            | GOTO IDENT SEMICOLON
 179            | GOTO STAR comma_expression SEMICOLON
 180            | ASM asmattr LPAREN asmtemplate asmoutputs RPAREN SEMICOLON
 181            | MSASM
 182            | TRY block EXCEPT paren_comma_expression block
 183            | TRY block FINALLY block
 184            | ASSERT LPAREN IDENT COMMA string_constant RPAREN SEMICOLON
 185            | ASSUME LPAREN IDENT COMMA string_constant RPAREN SEMICOLON
 186            | INVARIANT LPAREN IDENT COMMA string_constant RPAREN SEMICOLON
 187            | error location SEMICOLON

 188  for_clause : opt_expression SEMICOLON
 189             | declaration

 190  declaration : decl_spec_list init_declarator_list SEMICOLON
 191              | decl_spec_list SEMICOLON

 192  init_declarator_list : init_declarator
 193                       | init_declarator COMMA init_declarator_list

 194  init_declarator : declarator
 195                  | declarator EQ init_expression

 196  decl_spec_list : TYPEDEF decl_spec_list_opt
 197                 | EXTERN decl_spec_list_opt
 198                 | STATIC decl_spec_list_opt
 199                 | AUTO decl_spec_list_opt
 200                 | REGISTER decl_spec_list_opt
 201                 | type_spec decl_spec_list_opt_no_named
 202                 | INLINE decl_spec_list_opt
 203                 | cvspec decl_spec_list_opt
 204                 | attribute_nocv decl_spec_list_opt
 205                 | AT_SPECIFIER LPAREN IDENT RPAREN

 206  decl_spec_list_opt :
 207                     | decl_spec_list

 208  decl_spec_list_opt_no_named :
 209                              | decl_spec_list

 210  type_spec : VOID
 211            | CHAR
 212            | SHORT
 213            | INT
 214            | LONG
 215            | INT64
 216            | FLOAT
 217            | DOUBLE
 218            | SIGNED
 219            | UNSIGNED
 220            | STRUCT id_or_typename
 221            | STRUCT just_attributes id_or_typename
 222            | STRUCT id_or_typename prepost LBRACE struct_decl_list RBRACE
 223            | STRUCT prepost LBRACE struct_decl_list RBRACE
 224            | STRUCT just_attributes id_or_typename prepost LBRACE struct_decl_list RBRACE
 225            | STRUCT just_attributes prepost LBRACE struct_decl_list RBRACE
 226            | UNION id_or_typename
 227            | UNION id_or_typename prepost LBRACE struct_decl_list RBRACE
 228            | UNION prepost LBRACE struct_decl_list RBRACE
 229            | UNION just_attributes id_or_typename prepost LBRACE struct_decl_list RBRACE
 230            | UNION just_attributes prepost LBRACE struct_decl_list RBRACE
 231            | ENUM id_or_typename
 232            | ENUM id_or_typename LBRACE enum_list maybecomma RBRACE
 233            | ENUM LBRACE enum_list maybecomma RBRACE
 234            | ENUM just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE
 235            | ENUM just_attributes LBRACE enum_list maybecomma RBRACE
 236            | NAMED_TYPE
 237            | TYPEOF LPAREN expression RPAREN
 238            | TYPEOF LPAREN type_name RPAREN

 239  struct_decl_list :
 240                   | decl_spec_list SEMICOLON struct_decl_list
 241                   | SEMICOLON struct_decl_list
 242                   | decl_spec_list field_decl_list SEMICOLON struct_decl_list
 243                   | pragma struct_decl_list
 244                   | error SEMICOLON struct_decl_list

 245  field_decl_list : field_decl
 246                  | field_decl COMMA field_decl_list

 247  field_decl : declarator
 248             | declarator COLON expression attributes
 249             | COLON expression

 250  enum_list : enumerator
 251            | enum_list COMMA enumerator
 252            | enum_list COMMA error

 253  enumerator : IDENT
 254             | IDENT EQ expression

 255  declarator : pointer_opt direct_decl attributes_with_asm

 256  direct_decl : id_or_typename
 257              | LPAREN attributes declarator RPAREN
 258              | direct_decl LBRACKET attributes comma_expression_opt RBRACKET
 259              | direct_decl LBRACKET attributes error RBRACKET
 260              | direct_decl parameter_list_startscope rest_par_list RPAREN prepost

 261  parameter_list_startscope : LPAREN

 262  rest_par_list :
 263                | parameter_decl rest_par_list1

 264  rest_par_list1 :
 265                 | COMMA ELLIPSIS
 266                 | COMMA parameter_decl rest_par_list1

 267  parameter_decl : decl_spec_list declarator
 268                 | decl_spec_list abstract_decl
 269                 | decl_spec_list
 270                 | LPAREN parameter_decl RPAREN

 271  old_proto_decl : pointer_opt direct_old_proto_decl

 272  direct_old_proto_decl : direct_decl LPAREN old_parameter_list_ne RPAREN old_pardef_list prepost
 273                        | direct_decl LPAREN RPAREN prepost

 274  old_parameter_list_ne : IDENT
 275                        | IDENT COMMA old_parameter_list_ne

 276  old_pardef_list :
 277                  | decl_spec_list old_pardef SEMICOLON ELLIPSIS
 278                  | decl_spec_list old_pardef SEMICOLON old_pardef_list

 279  old_pardef : declarator
 280             | declarator COMMA old_pardef
 281             | error

 282  pointer : STAR attributes pointer_opt

 283  pointer_opt :
 284              | pointer

 285  type_name : decl_spec_list abstract_decl
 286            | decl_spec_list

 287  abstract_decl : pointer_opt abs_direct_decl attributes
 288                | pointer

 289  abs_direct_decl : LPAREN attributes abstract_decl RPAREN
 290                  | LPAREN error RPAREN
 291                  | abs_direct_decl_opt LBRACKET comma_expression_opt RBRACKET
 292                  | abs_direct_decl parameter_list_startscope rest_par_list RPAREN

 293  abs_direct_decl_opt : abs_direct_decl
 294                      |

 295  function_def : function_def_start block

 296  function_def_start : decl_spec_list declarator
 297                     | decl_spec_list old_proto_decl
 298                     | IDENT parameter_list_startscope rest_par_list RPAREN prepost
 299                     | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list prepost
 300                     | IDENT LPAREN RPAREN prepost

 301  prepost :
 302          | prepost_ne

 303  prepost_ne : prepost_cond
 304             | prepost_cond prepost_ne

 305  prepost_cond : PRECONDITION LPAREN IDENT COMMA string_constant RPAREN
 306               | POSTCONDITION LPAREN IDENT COMMA string_constant RPAREN
 307               | MODIFIES LPAREN IDENT COMMA string_constant RPAREN
 308               | TINVARIANT LPAREN IDENT COMMA string_constant RPAREN

 309  cvspec : CONST
 310         | VOLATILE
 311         | RESTRICT

 312  attributes :
 313             | attribute attributes

 314  attributes_with_asm :
 315                      | attribute attributes_with_asm
 316                      | ASM LPAREN string_constant RPAREN attributes

 317  attribute_nocv : ATTRIBUTE LPAREN paren_attr_list RPAREN
 318                 | DECLSPEC paren_attr_list_ne
 319                 | MSATTR
 320                 | THREAD
 321                 | ANNOTATION

 322  attribute_nocv_list :
 323                      | attribute_nocv attribute_nocv_list

 324  attribute : attribute_nocv
 325            | CONST
 326            | RESTRICT
 327            | VOLATILE

 328  just_attribute : ATTRIBUTE LPAREN paren_attr_list RPAREN
 329                 | DECLSPEC paren_attr_list_ne

 330  just_attributes : just_attribute
 331                  | just_attribute just_attributes

 332  pragma : PRAGMA attr PRAGMA_EOL
 333         | PRAGMA attr SEMICOLON PRAGMA_EOL
 334         | PRAGMA_LINE

 335  primary_attr : IDENT
 336               | NAMED_TYPE
 337               | LPAREN attr RPAREN
 338               | IDENT IDENT
 339               | CST_INT
 340               | string_constant
 341               | CONST
 342               | IDENT COLON CST_INT
 343               | CST_INT COLON CST_INT
 344               | DEFAULT COLON CST_INT
 345               | VOLATILE

 346  postfix_attr : primary_attr
 347               | IDENT LPAREN RPAREN
 348               | IDENT paren_attr_list_ne
 349               | postfix_attr ARROW id_or_typename
 350               | postfix_attr DOT id_or_typename
 351               | postfix_attr LBRACKET attr RBRACKET

 352  unary_attr : postfix_attr
 353             | SIZEOF unary_expression
 354             | SIZEOF LPAREN type_name RPAREN
 355             | ALIGNOF unary_expression
 356             | ALIGNOF LPAREN type_name RPAREN
 357             | PLUS cast_attr
 358             | MINUS cast_attr
 359             | STAR cast_attr
 360             | AND cast_attr
 361             | EXCLAM cast_attr
 362             | TILDE cast_attr

 363  cast_attr : unary_attr

 364  multiplicative_attr : cast_attr
 365                      | multiplicative_attr STAR cast_attr
 366                      | multiplicative_attr SLASH cast_attr
 367                      | multiplicative_attr PERCENT cast_attr

 368  additive_attr : multiplicative_attr
 369                | additive_attr PLUS multiplicative_attr
 370                | additive_attr MINUS multiplicative_attr

 371  shift_attr : additive_attr
 372             | shift_attr INF_INF additive_attr
 373             | shift_attr SUP_SUP additive_attr

 374  relational_attr : shift_attr
 375                  | relational_attr INF shift_attr
 376                  | relational_attr SUP shift_attr
 377                  | relational_attr INF_EQ shift_attr
 378                  | relational_attr SUP_EQ shift_attr

 379  equality_attr : relational_attr
 380                | equality_attr EQ_EQ relational_attr
 381                | equality_attr EXCLAM_EQ relational_attr

 382  bitwise_and_attr : equality_attr
 383                   | bitwise_and_attr AND equality_attr

 384  bitwise_xor_attr : bitwise_and_attr
 385                   | bitwise_xor_attr CIRC bitwise_and_attr

 386  bitwise_or_attr : bitwise_xor_attr
 387                  | bitwise_or_attr PIPE bitwise_xor_attr

 388  logical_and_attr : bitwise_or_attr
 389                   | logical_and_attr AND_AND bitwise_or_attr

 390  logical_or_attr : logical_and_attr
 391                  | logical_or_attr PIPE_PIPE logical_and_attr

 392  conditional_attr : logical_or_attr
 393                   | logical_or_attr QUEST conditional_attr COLON conditional_attr

 394  attr : conditional_attr

 395  attr_list_ne : attr
 396               | attr COMMA attr_list_ne
 397               | error COMMA attr_list_ne

 398  attr_list :
 399            | attr_list_ne

 400  paren_attr_list_ne : LPAREN attr_list_ne RPAREN
 401                     | LPAREN error RPAREN

 402  paren_attr_list : LPAREN attr_list RPAREN
 403                  | LPAREN error RPAREN

 404  opt_paren_attr_list :
 405                      | paren_attr_list

 406  asmattr :
 407          | VOLATILE asmattr
 408          | CONST asmattr

 409  asmtemplate : one_string_constant
 410              | one_string_constant asmtemplate

 411  asmoutputs :
 412             | COLON asmoperands asminputs

 413  asmoperands :
 414              | asmoperandsne

 415  asmoperandsne : asmoperand
 416                | asmoperandsne COMMA asmoperand

 417  asmoperand : asmopname string_constant LPAREN expression RPAREN
 418             | asmopname string_constant LPAREN error RPAREN

 419  asminputs :
 420            | COLON asmoperands asmclobber

 421  asmopname :
 422            | LBRACKET IDENT RBRACKET

 423  asmclobber :
 424             | COLON asmcloberlst_ne

 425  asmcloberlst_ne : one_string_constant
 426                  | one_string_constant COMMA asmcloberlst_ne

 427  %entry% : '\001' interpret
 428          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (427)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA_LINE  shift 35
	PRAGMA  shift 36
	AT_TRANSFORM  shift 37
	AT_TRANSFORMEXPR  shift 38
	AT_SPECIFIER  shift 39
	ANNOTATION  shift 40
	error  reduce 6
	EOF  reduce 3

	interpret  goto 41
	file  goto 42
	globals  goto 43
	global  goto 44
	decl_spec_list  goto 45
	type_spec  goto 46
	declaration  goto 47
	function_def  goto 48
	function_def_start  goto 49
	location  goto 50
	cvspec  goto 51
	pragma  goto 52
	attribute_nocv  goto 53


state 2
	%entry% : '\002' . file  (428)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA_LINE  shift 35
	PRAGMA  shift 36
	AT_TRANSFORM  shift 37
	AT_TRANSFORMEXPR  shift 38
	AT_SPECIFIER  shift 39
	ANNOTATION  shift 40
	$end  reduce 3
	error  reduce 6

	file  goto 54
	globals  goto 43
	global  goto 44
	decl_spec_list  goto 45
	type_spec  goto 46
	declaration  goto 47
	function_def  goto 48
	function_def_start  goto 49
	location  goto 50
	cvspec  goto 51
	pragma  goto 52
	attribute_nocv  goto 53


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list prepost SEMICOLON  (13)
	global : IDENT . LPAREN RPAREN prepost SEMICOLON  (14)
	function_def_start : IDENT . parameter_list_startscope rest_par_list RPAREN prepost  (298)
	function_def_start : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list prepost  (299)
	function_def_start : IDENT . LPAREN RPAREN prepost  (300)

	LPAREN  shift 55
	.  error

	parameter_list_startscope  goto 56


state 5
	type_spec : NAMED_TYPE .  (236)

	.  reduce 236


state 6
	type_spec : CHAR .  (211)

	.  reduce 211


state 7
	type_spec : INT .  (213)

	.  reduce 213


state 8
	type_spec : DOUBLE .  (217)

	.  reduce 217


state 9
	type_spec : FLOAT .  (216)

	.  reduce 216


state 10
	type_spec : VOID .  (210)

	.  reduce 210


state 11
	type_spec : INT64 .  (215)

	.  reduce 215


state 12
	type_spec : ENUM . id_or_typename  (231)
	type_spec : ENUM . id_or_typename LBRACE enum_list maybecomma RBRACE  (232)
	type_spec : ENUM . LBRACE enum_list maybecomma RBRACE  (233)
	type_spec : ENUM . just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE  (234)
	type_spec : ENUM . just_attributes LBRACE enum_list maybecomma RBRACE  (235)

	IDENT  shift 57
	NAMED_TYPE  shift 58
	LBRACE  shift 59
	ATTRIBUTE  shift 60
	DECLSPEC  shift 61
	AT_NAME  shift 62
	.  error

	id_or_typename  goto 63
	just_attributes  goto 64
	just_attribute  goto 65


state 13
	type_spec : STRUCT . id_or_typename  (220)
	type_spec : STRUCT . just_attributes id_or_typename  (221)
	type_spec : STRUCT . id_or_typename prepost LBRACE struct_decl_list RBRACE  (222)
	type_spec : STRUCT . prepost LBRACE struct_decl_list RBRACE  (223)
	type_spec : STRUCT . just_attributes id_or_typename prepost LBRACE struct_decl_list RBRACE  (224)
	type_spec : STRUCT . just_attributes prepost LBRACE struct_decl_list RBRACE  (225)
	prepost : .  (301)

	IDENT  shift 57
	NAMED_TYPE  shift 58
	ATTRIBUTE  shift 60
	DECLSPEC  shift 61
	AT_NAME  shift 62
	PRECONDITION  shift 66
	POSTCONDITION  shift 67
	TINVARIANT  shift 68
	MODIFIES  shift 69
	LBRACE  reduce 301

	prepost  goto 70
	id_or_typename  goto 71
	just_attributes  goto 72
	prepost_ne  goto 73
	prepost_cond  goto 74
	just_attribute  goto 65


state 14
	decl_spec_list : TYPEDEF . decl_spec_list_opt  (196)
	decl_spec_list_opt : .  (206)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 75
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 39
	ANNOTATION  shift 40
	error  reduce 206
	IDENT  reduce 206
	STAR  reduce 206
	RPAREN  reduce 206
	LPAREN  reduce 206
	LBRACKET  reduce 206
	COLON  reduce 206
	SEMICOLON  reduce 206
	COMMA  reduce 206
	AT_NAME  reduce 206

	decl_spec_list  goto 76
	type_spec  goto 46
	cvspec  goto 51
	decl_spec_list_opt  goto 77
	attribute_nocv  goto 53


state 15
	type_spec : UNION . id_or_typename  (226)
	type_spec : UNION . id_or_typename prepost LBRACE struct_decl_list RBRACE  (227)
	type_spec : UNION . prepost LBRACE struct_decl_list RBRACE  (228)
	type_spec : UNION . just_attributes id_or_typename prepost LBRACE struct_decl_list RBRACE  (229)
	type_spec : UNION . just_attributes prepost LBRACE struct_decl_list RBRACE  (230)
	prepost : .  (301)

	IDENT  shift 57
	NAMED_TYPE  shift 58
	ATTRIBUTE  shift 60
	DECLSPEC  shift 61
	AT_NAME  shift 62
	PRECONDITION  shift 66
	POSTCONDITION  shift 67
	TINVARIANT  shift 68
	MODIFIES  shift 69
	LBRACE  reduce 301

	prepost  goto 78
	id_or_typename  goto 79
	just_attributes  goto 80
	prepost_ne  goto 73
	prepost_cond  goto 74
	just_attribute  goto 65


state 16
	type_spec : SIGNED .  (218)

	.  reduce 218


state 17
	type_spec : UNSIGNED .  (219)

	.  reduce 219


state 18
	type_spec : LONG .  (214)

	.  reduce 214


state 19
	type_spec : SHORT .  (212)

	.  reduce 212


state 20
	cvspec : VOLATILE .  (310)

	.  reduce 310


state 21
	global : EXTERN . string_constant declaration  (9)
	global : EXTERN . string_constant LBRACE globals RBRACE  (10)
	decl_spec_list : EXTERN . decl_spec_list_opt  (197)
	decl_spec_list_opt : .  (206)

	NAMED_TYPE  shift 5
	CST_STRING  shift 81
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 75
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	FUNCTION__  shift 82
	PRETTY_FUNCTION__  shift 83
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 39
	ANNOTATION  shift 40
	IDENT  reduce 206
	STAR  reduce 206
	LPAREN  reduce 206
	SEMICOLON  reduce 206
	AT_NAME  reduce 206

	string_constant  goto 84
	string_list  goto 85
	decl_spec_list  goto 76
	type_spec  goto 46
	cvspec  goto 51
	one_string  goto 86
	decl_spec_list_opt  goto 87
	attribute_nocv  goto 53


state 22
	decl_spec_list : STATIC . decl_spec_list_opt  (198)
	decl_spec_list_opt : .  (206)
